fix(search-result): left align search result title

--- a/src/scripts/components/main/search-result/search-result.module.css
+++ b/src/scripts/components/main/search-result/search-result.module.css
@@ -17,6 +17,8 @@
     }
 
     > strong {
+        display: block;
+        text-align: left;
         color: var(--light-green);
     }
 }
